se clono el proyecto parcel-jest-base de un repositorio

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parcel-jest-base",
   "version": "1.0.0",
-  "description": "",
+  "description": "npm install",
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
@@ -19,6 +19,8 @@
     "babel-jest": "^29.5.0",
     "cypress": "^12.8.1",
     "jest": "^29.5.0",
-    "parcel": "^2.8.3"
-  }
+    "parcel": "^2.8.3",
+    "parcel-bundler": "^1.12.5"
+  },
+  "main": "cypress.config.js"
 }
